# Proyecto_DesarolloWeb

./: README.md  iniciar-db.sh
inventario-backend/: .env  .env.example  README.md  pyproject.toml  run.bat
inventario-backend/database/: init.sql
inventario-backend/src/inventarioback/: app.py  db.py  test_db.py
inventario-backend/src/inventarioback/models/: models.py
inventario-backend/src/inventarioback/routers/: base.py  movements.py  products.py
inventario-backend/src/inventarioback/schemas/: schemas.py
inventario-backend/src/inventarioback/services/: movements.py  products.py
inventario-frontend/: README.md  package-lock.json  package.json  run.bat
inventario-frontend/src/app/: globals.css  layout.tsx
inventario-frontend/src/app/api/: movements_handler.tsx  products_handler.tsx
inventario-frontend/src/app/components/: footer.tsx  navbar.tsx
inventario-frontend/src/app/movements/: page.tsx
inventario-frontend/src/app/products/: page.tsx
inventario-frontend/src/app/stats/: page.tsx
