[project]
name = "inventarioback"
version = "0.1.0"
description = "Sistema de Gestión de Inventario - Backend"
authors = [
    {name = "Axel Yamil Severiano Ruiz", email = "axel@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "psycopg[binary]>=3.3.3",
]

[tool.poetry]
packages = [{include = "inventarioback", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
